# treemd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  debug_output.txt  justfile
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs
src/cli/: commands.rs
src/keybindings/: action.rs  defaults.rs  mod.rs
src/parser/: content.rs  links.rs  mod.rs  output.rs  utils.rs
src/query/: eval.rs
src/tui/: app.rs  help_text.rs  image_cache.rs  interactive.rs  kitty_animation.rs  mod.rs  terminal_compat.rs  tty.rs  ui.rs  watcher.rs
src/tui/ui/: layout.rs  mod.rs  popups.rs  table.rs  util.rs
